# django-asgi-lifespan

./: .bumpversion.cfg  .bumpversion.toml  .coveragerc  .dockerignore  .editorconfig  .gitattributes  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTES.txt  README.md  Taskfile.yml  activate.ps1  codecov.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  setup.cfg  sitemap.xml
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/workflows/: codeql-analysis.yml  dev.yml  development.yml  preview.yml  release.yml
api/: index.html
asgi/: index.html
changelog/: index.html
contributing/: index.html
credits/: index.html
development/: index.html
diagrams/: sequence.full.puml
django_asgi_lifespan/: __init__.py  asgi.py  compat.py  dispatcher.py  django_asgi_lifespan.py  errors.py  events.py  handler.py  middleware.py  register.py  signals.py  testing.py  types.py
docs/: api.md  asgi.md  changelog.md  credits.md  development.md  installation.md  limitations.md  reference.md  release.md  testing.md  usage.md
docs/diagrams/: overview.puml  sequence.simple.puml
docs/how_to_use/: context_manager.md  signals.md
example/: apps.py  context.py  handlers.py  handlers_quickstart.py  managers_app.py  managers_view.py  types.py  views.py
how_to_use/context_manager/: index.html
how_to_use/signals/: index.html
installation/: index.html
limitations/: index.html
reference/: index.html
release/: index.html
search/: search_index.json
testing/: index.html
tests/: __init__.py  conftest.py  test_django_asgi_lifespan.py  test_integration_django.py  test_integration_uvicorn.py  test_public_interface.py  test_signals.py
tests/django_test_application/: asgi.py  manage.py  settings.py  urls.py
tests/django_test_application/test_app/: apps.py  handlers.py  middleware.py  urls.py  views.py
tests/django_test_application/test_app/management/commands/: use_standalone.py
tests/e2e/: run-e2e.sh
usage/: index.html
