[project]
name = "django-asgi-lifespan"
version = "0.5.1"
description = "Django ASGI handler with Lifespan Protocol support."
authors = [
    { name = "Václav Dohnal", email = "vaclav.dohnal@gmail.com" }
]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
keywords = ["django", "asgi", "lifespan", "async", "signals"]
requires-python = ">=3.10, <3.15"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
]

dependencies = [
    # this would be nice, but it is not supported by PyPI: ^4.2 || ^5.0.3
    "Django>=4.2,<6.1,!=5.0.0,!=5.0.1,!=5.0.2",
    "asgiref>=3.0.0"
]

[project.urls]
homepage = "https://github.com/illagrenan/django-asgi-lifespan"
documentation = "https://illagrenan.github.io/django-asgi-lifespan/"
repository = "https://github.com/illagrenan/django-asgi-lifespan"
bug-tracker = "https://github.com/illagrenan/django-asgi-lifespan/issues"
changelog = "https://illagrenan.github.io/django-asgi-lifespan/changelog/"

[dependency-groups]
dev = [
    # --- Linting & type checking ---
    "mypy>=1.20.1",
    "ruff>=0.15.11",
    "pyright>=1.1.408",

    # --- Testing ---
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.12.0",
    "httpx>=0.28.1",

    # --- Test ASGI servers ---
    "uvicorn[standard]>=0.44.0",
    "daphne>=4.2.1",
    "hypercorn>=0.18.0",
    "granian>=2.7.3",
    "gunicorn>=25.3.0; platform_system == 'Linux'",

    # --- Compatibility with Python 3.13 ---
    "uvloop>=0.22.1; sys_platform != 'win32' and python_version == '3.13'",
    "httptools>=0.7.1",

    # --- Releases ---
    "bump-my-version>=1.3.0",
    "twine>=6.2.0",

    # --- Documentation ---
    "mkdocs>=1.6.1",
    "mkdocs-include-markdown-plugin>=7.2.2",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.4",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocs-autorefs>=1.4.4",
    "mkdocs-glightbox>=0.5.2",

    # --- Misc ---
    "ipython>=9.12.0; python_version >= '3.12'",
    "ipdb>=0.13.13",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
# Specify that the module is in the root directory, not src/
module-root = "."
source-include = ["django_asgi_lifespan/py.typed"]
sdist-include = ["tests/**"]

[tool.pytest.ini_options]
minversion = "8.0"
norecursedirs = [
    # Default pytest directories (https://docs.pytest.org/en/stable/reference/reference.html#confval-norecursedirs)
    "*.egg",
    ".*",
    "_darcs",
    "build",
    "CVS",
    "dist",
    "node_modules",
    "venv",
    # Custom directories
    ".venv",
    ".git",
    "__pycache__",
    ".task",
    ".junie",
]
DJANGO_SETTINGS_MODULE = "tests.django_test_application.settings"
addopts = "--verbose --color=yes --showlocals -r A --tb=auto -s -x"
python_files = [
    "tests.py",
    "test_*.py",
    "*_tests.py"
]
junit_suite_name = "django-asgi-lifespan"
junit_family = "xunit2"
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = '%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)'
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
asyncio_mode = "auto"
testpaths = [
    "./tests/"
]

[tool.ruff.lint]
select = [
    "A",
    "ARG",
    "ASYNC",
    "B",
    "BLE",
    "C4",
    "C90",
    "DTZ",
    "E",
    "ERA",
    "F",
    "FA",
    "FAST",
    "FLY",
    "FURB",
    "G",
    "I",
    "ICN",
    "ISC",
    "LOG",
    "PERF",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "SLOT",
    "T10",
    "T20",
    "TC",
    "TID",
    "TRY",
    "UP",
]
ignore = [
    "ISC001",
    "RET504",
    "RET505",
    "S101",
    "TC001",
    "TC002",
    "TC003",
    "TC006",
    "TC007",
    "TRY003",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "ARG",
    "FURB157",
    "PLR2004",
    "PT019",
]
"example/**" = [
    "ARG",
]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["tests.*", "example.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false
disallow_untyped_calls = false
disable_error_code = ["misc", "type-arg"]
